# SFML_CMake_Template

SFML_Project_Template/: CMakeLists.txt
SFML_Project_Template/Headers/: header.h
SFML_Project_Template/Source/: main.cpp
